--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@
 
 .slide-feature {
   text-align: center;
-  background-image: url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/ac.png');
+  background-image: url('');
   height: 470px;
 }
 
