--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* General */
+/* General */
 
 .container {
   width: 960px;
@@ -188,4 +188,52 @@
 
 .get-app img {
   height: 40px;
+}
+
+/* THREE.js */
+
+#skills .skills-canvas>canvas {
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+    cursor: grab;
+}
+
+#skills .skills-canvas>canvas:active {
+    cursor: -webkit-grabbing;
+    cursor: -moz-grabbing;
+    cursor: grabbing;
+}
+
+#skills .skills-canvas {
+    width: 75%;
+    width: calc(100% - 400px);
+    display: inline-block;
+    height: 100%;
+}
+
+#skills .ace_scrollbar-v{
+    overflow: hidden !important;
+}
+
+/* .skills-info>canvas {
+    position: absolute;
+    left: 0;
+    top: 61px;
+} */
+
+#skills .editor{
+    /* overflow: hidden; */    
+}
+
+.ace-github  {
+    color: white !important;
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    width: 100%;
+    height: 100%;
+    background: transparent !important;
+    font-size: 14px !important;
+}
+
+.ace-github .ace_indent-guide{
+    background: none !important;
 }
