--- a/style.css
+++ b/style.css
@@ -237,3 +237,16 @@
 .ace-github .ace_indent-guide{
     background: none !important;
 }
+
+.full-wh {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    padding-top: 50px;
+    background: hsl(0, 0%, 95%);
+    background: linear-gradient(hsl(0, 0%, 95%), hsl(0, 0%, 85%));
+    visibility: hidden;
+}
+
+
+
